[metadata]
name = hubuum
version = 0.1
description = An infrastructure database
long_description = file: README.md
url = https://github.com/terjekv/hubuum/
author = Terje Kvernes
author_email = terje@kvernes.no
license = CC0 1.0
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.1  # Replace "X.Y" as appropriate
    Intended Audience :: Information Technology
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    Django >= 4.1  # Replace "X.Y" as appropriate